improved versioning & added initial loading spinner

--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Graphviz App</title>
+    <title>DrawViz App</title>
+    <meta name="description" content="Online Graphviz editor and rendering app.">
+    <meta name="keywords" content="graphviz,dot,online,web,editor,render,viz.js">
+    <meta name="author" content="Alexander Wolf">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- css injected here -->
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <!-- loading spinner until app loaded -->
+      <div class="center">
+        <div class="sk-circle">
+          <div class="sk-circle1 sk-child"></div>
+          <div class="sk-circle2 sk-child"></div>
+          <div class="sk-circle3 sk-child"></div>
+          <div class="sk-circle4 sk-child"></div>
+          <div class="sk-circle5 sk-child"></div>
+          <div class="sk-circle6 sk-child"></div>
+          <div class="sk-circle7 sk-child"></div>
+          <div class="sk-circle8 sk-child"></div>
+          <div class="sk-circle9 sk-child"></div>
+          <div class="sk-circle10 sk-child"></div>
+          <div class="sk-circle11 sk-child"></div>
+          <div class="sk-circle12 sk-child"></div>
+        </div>
+        <p style="text-align: center; font-family: Arial,Helvetica Neue,Helvetica,sans-serif;">loading...</p>
+      </div>
+    </div>
     <!-- built files will be auto injected -->
 
   <script>
