--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Online Graphviz editor and rendering app.">
     <meta name="keywords" content="graphviz,dot,online,web,editor,render,viz.js">
     <meta name="author" content="Alexander Wolf">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <!-- css injected here -->
   </head>
   <body>
