--- a/index.html
+++ b/index.html
@@ -33,14 +33,32 @@
     <!-- built files will be auto injected -->
 
   <script>
+    var gaProperty = 'UA-103069431-1';
+
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-103069431-1', 'auto');
+    ga('create', gaProperty, 'auto');
     ga('send', 'pageview');
 
+    // opt-out script from here https://stackoverflow.com/questions/30910043/google-analytics-code-on-landing-page-and-cookie-law
+
+    // Disable tracking if the opt-out cookie exists.
+    var disableStr = 'ga-disable-' + gaProperty;
+    if (document.cookie.indexOf(disableStr + '=true') > -1) {
+      window[disableStr] = true;
+      console.log('disbaled?', window[disableStr], disableStr);
+    }
+
+    // Opt-out function
+    function gaDisableTracking() {
+      document.cookie = disableStr + '=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/';
+      window[disableStr] = true;
+
+      console.log('disabled', window[disableStr]);
+    }
   </script>
   </body>
 </html>
